[package]
name = "mcping"
version = "0.1.0"
edition = "2021"
description = "A simple tool to acquire Minecraft server information using the Server List Ping interface"
repository = "https://github.com/IoanThomas/mcping/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1", features = ["derive"] }
mc-varint = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
