[package]
name = "mcping"
version = "0.2.0"
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/IoanThomas/mcping"
readme = "README.md"
description = "A simple tool to acquire Minecraft server information using the Server List Ping interface"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
mc-varint = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
